# nb_udm_plugin

./: .gitignore  README.md  __init__.py  choices.py  filtersets.py  forms.py  jobs.py  models.py  navigation.py  pyproject.toml  reconciliation.py  scanner.py  tables.py  template_content.py  unifi_client.py  urls.py  views.py
api/: serializers.py  urls.py  views.py
migrations/: 0001_initial.py  0002_discoverysource_token.py
templates/nb_udm_plugin/: dashboard.html  discoverymapping.html  discoveryresult.html  discoverysource.html  scanjob.html
